--- a/index.html
+++ b/index.html
@@ -6,7 +6,31 @@
     <title>Rechner</title>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="screen">0</div>
+        <div class="button-container">
+            <button class="delete">AC</button>
+            <button class="pos_neg">+/-</button>
+            <button class="percent">%</button>
+            <button class="operator" value="/">/</button>
+            <button class="operand" value="7">7</button>
+            <button class="operand" value="8">8</button>
+            <button class="operand" value="9">9</button>
+            <button class="operator" value="*">*</button>
+            <button class="operand" value="4">4</button>
+            <button class="operand" value="5">5</button>
+            <button class="operand" value="6">6</button>
+            <button class="operator" value="-">-</button>
+            <button class="operand" value="1">1</button>
+            <button class="operand" value="2">2</button>
+            <button class="operand" value="3">3</button>
+            <button class="operator" value="+">+</button>
+            <button class="operand" value="0">0</button>
+            <button class="decimal">.</button>
+            <button class="equal">=</button>
+
+        </div>
+    </div>
     
 </body>
 </html>
