--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Rechner</title>
 </head>
 <body>
-    <div class="calculator">
+    <div class="container">
         <div class="screen">0</div>
         <div class="button-container">
             <button class="delete">AC</button>
