Flex grow to the zero button and change the space-between for all the buttons

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="operand" value="2">2</button>
             <button class="operand" value="3">3</button>
             <button class="operator" value="+">+</button>
-            <button class="operand" value="0">0</button>
+            <button class="operand zero" value="0">0</button>
             <button class="decimal">.</button>
             <button class="equal">=</button>
 
