Add data-action attribute to identify wheter is a key or a number

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="container">
         <div class="screen">0</div>
         <div class="button-container">
-            <button class="delete">AC</button>
+            <button class="delete" data-action="clear">AC</button>
             <button class="pos_neg">+/-</button>
-            <button class="percent">%</button>
-            <button class="operator" value="/">/</button>
+            <button class="percent" data-action="percentage">%</button>
+            <button class="operator" data-action="divide">/</button>
             <button class="operand" value="7">7</button>
             <button class="operand" value="8">8</button>
             <button class="operand" value="9">9</button>
-            <button class="operator" value="*">*</button>
+            <button class="operator" data-action="multiply">*</button>
             <button class="operand" value="4">4</button>
             <button class="operand" value="5">5</button>
             <button class="operand" value="6">6</button>
-            <button class="operator" value="-">-</button>
+            <button class="operator" data-action="substract">-</button>
             <button class="operand" value="1">1</button>
             <button class="operand" value="2">2</button>
             <button class="operand" value="3">3</button>
-            <button class="operator" value="+">+</button>
+            <button class="operator" data-action="add">+</button>
             <button class="operand zero" value="0">0</button>
-            <button class="decimal">.</button>
-            <button class="equal">=</button>
+            <button class="decimal" data-action="decimal">.</button>
+            <button class="equal" data-action="calculate">=</button>
 
         </div>
     </div>
