--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="screen">0</div>
         <div class="button-container">
-            <button class="delete" data-action="clear">AC</button>
+            <button class="delete" data-action="delete">AC</button>
             <button class="pos_neg">+/-</button>
             <button class="percent" data-action="percentage">%</button>
             <button class="operator" data-action="divide">/</button>
