--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <div class="screen">0</div>
         <div class="button-container">
-            <button class="delete" data-action="delete">AC</button>
-            <button class="pos_neg">+/-</button>
-            <button class="percent" data-action="percentage">%</button>
+            <button class="clear" data-action="delete">AC</button>
+            <button class="operator">+/-</button>
+            <button class="operator" data-action="percentage">%</button>
             <button class="operator" data-action="divide">/</button>
             <button class="operand" value="7">7</button>
             <button class="operand" value="8">8</button>
